# therapy-deliberate-practice

./: .env.example  .env.release.example  .gitignore  NOTICE  README.md  package-lock.json  package.json
.github/workflows/: ci.yml  desktop-cross-release.yml  desktop-signed-release-example.yml  local-suite-app-store.yml  release.yml
apps/api/: Dockerfile  package.json  tsconfig.json  wrangler.toml
apps/api/infra/: seed.sql
apps/api/src/: app.ts  env.ts  index.ts  seed.ts  server.ts
apps/api/tests/: adminBatchParseService.test.ts  adminTranslateTask.test.ts  aiConfigResolver.test.ts  leaderboard.test.ts  minigamePromptSelection.test.ts  minigameRoundsService.test.ts  openaiResponses.test.ts  openaiStt.test.ts  openaiTts.test.ts  patientAudioPrefetchBatch.test.ts  practiceConfigErrors.test.ts  providerSelection.test.ts  taskInteractionExamples.test.ts  tasksFilters.test.ts  ttsCache.test.ts  ttsService.test.ts
apps/web/: index.html  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/web/public/: robots.txt  sitemap.xml
apps/web/src/: i18n.ts  main.tsx  routes.tsx
apps/web/tests/: endGameResultsOverlay.spec.ts  ffaPlayerSwitching.spec.ts  minigameHub.spec.ts  patientAudio.spec.ts
apps/worker/: package.json  seed.sql  wrangler.jsonc
apps/worker/migrations/: 0001_init_v2.sql  0002_add_exercise_content.sql  0002_add_tts_assets.sql  0003_add_task_language.sql  0003_add_user_settings.sql  (+7 more)
docs/: release.md  signing.md
infra/: docker-compose.yml  seed.sql
infra/migrations/: 0001_init.sql
scripts/: start_local_ai.py
scripts/release/: build-linux-inner.sh  build-linux.sh  build-macos-appstore.sh  build-macos.sh  build-windows.ps1  load-release-env.sh  notarize-dmg.sh  run-release-appstore.mjs  run-release-gh.mjs  run-release.mjs
services/local-llm/: README.md
services/local-runtime-suite/: .gitignore  README.md  package.json
services/local-runtime-suite/desktop/src-tauri/: Cargo.toml  Entitlements.plist  README.md  tauri.appstore.conf.json  tauri.conf.json  tauri.ios.conf.json  tauri.sidecar.conf.json
services/local-runtime-suite/desktop/src-tauri/capabilities/: default.json
services/local-runtime-suite/desktop/src-tauri/src/: main.rs
services/local-runtime-suite/python/: .gitignore  README.md  pyinstaller.local_runtime_gateway.spec  pyproject.toml
services/local-runtime-suite/python/local_runtime/: __init__.py  init.py  main.py  runtime_types.py  spec.py  types.py
services/local-runtime-suite/python/local_runtime/api/: audio_speech.py  audio_transcriptions.py  audio_translations.py  health.py  models.py  models_list.py  openai_compat.py  responses.py
services/local-runtime-suite/python/local_runtime/core/: config.py  doctor.py  errors.py  load_manager.py  loader.py  logging.py  platform.py  readiness.py  registry.py  selector.py  selftest.py  sse.py  supervisor.py
services/local-runtime-suite/python/local_runtime/helpers/: audio_helpers.py  multipart_helpers.py  responses_helpers.py  structured_enforcer.py  structured_output.py
services/local-runtime-suite/python/local_runtime/models/: model_llm_ollama_proxy.py  model_llm_qwen3_hf.py  model_llm_qwen3_mlx.py  model_stt_faster_whisper.py  model_stt_openai_proxy.py  model_stt_parakeet_mlx.py  model_template.py  model_tts_chatterbox.py  model_tts_kokoro_local.py  model_tts_openai_proxy.py
services/local-runtime-suite/python/local_runtime/workers/: llm_worker.py  stt_worker.py  tts_worker.py
services/local-runtime-suite/python/pyinstaller-hooks/: hook-mlx.py
services/local-runtime-suite/python/tests/: conftest.py  test_audio_endpoints.py  test_openai_shapes.py  test_parakeet_audio_boost.py  test_startup_selftest.py  test_streaming_sse.py  test_structured_output_helpers.py  test_structured_outputs_integration.py
services/local-runtime-suite/python/tools/: __init__.py  build_portable_sidecar.py
services/local-stt/: README.md
(+203 files in other folders)
