[project]
name = "local-runtime"
version = "0.1.0"
description = "Local runtime gateway for Therapy Studio"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.29",
  "pydantic>=2.6",
  "httpx>=0.27",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
lint = ["ruff>=0.6.0"]
test = ["pytest>=8.0"]

[tool.ruff]
line-length = 110

[tool.ruff.format]
quote-style = "double"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
