[project]
name = "local-runtime"
version = "0.1.0"
description = "Local runtime gateway for Therapy Studio"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.29",
  "pydantic>=2.6",
  "httpx>=0.27",
  "python-multipart>=0.0.9",
  "pydantic>=2.6",
  "torch==2.6.0",
  "transformers==4.57.3",
  "llama-cpp-python>=0.2.90",
  "huggingface_hub>=0.24",
  "accelerate>=0.33",
  "mlx==0.30.1; platform_system == \"Darwin\" and platform_machine == \"arm64\"",
  "mlx-metal==0.30.1; platform_system == \"Darwin\" and platform_machine == \"arm64\"",
  "mlx-lm==0.29.1; platform_system == \"Darwin\" and platform_machine == \"arm64\"",
  "mlx-audio==0.2.10; platform_system == \"Darwin\" and platform_machine == \"arm64\"",
  "parakeet-mlx==0.4.1; platform_system == \"Darwin\" and platform_machine == \"arm64\"",
  "sounddevice==0.5.3; platform_system == \"Darwin\" and platform_machine == \"arm64\"",
  "soundfile==0.13.1; platform_system == \"Darwin\" and platform_machine == \"arm64\""
]

[project.optional-dependencies]
lint = ["ruff>=0.6.0"]
test = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.ruff]
line-length = 110

[tool.ruff.format]
quote-style = "double"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
